<resources>
    <string name="app_name">KaraokeRecordingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to the Karaoke Recording App. With this app, you are able to
        sing thousands of known songs worldwide with your friends, as also to record your singing and
        be able to easily retrieve them. In order to continue, press the button below.
    </string>
    <string name="continue_btn">CONTINUE</string>
    <string name="try_again_text">Please try again.</string>
    <string name="permissions_text">To be able to continue using Recording App, you are required to provide the necessary permissions. </string>
    <string name="grant_permissions_btn">GRANT PERMISSIONS</string>
    <string name="must_set_permissions">You must set record audio permission to proceed.</string>


    <string name="recording_message_begin">Tap button to</string>
    <string name="recording_message_end">recording</string>
    <string name="recording_message_start">START</string>
    <string name="recording_message_pause">PAUSE</string>
    <string name="recording_message_stop">STOP</string>
    <string name="recording_continue">CONTINUE</string>

    <string name="save_recording">Save Recording</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="reset">RESET</string>

    <string name="check_recordings_list">Go to recordings list</string>
    <string name="go_to_video_recording">Go to video recording</string>

    <string name="save_recording_toast">The recording has been saved.</string>
    <string name="delete_recording_toast">The recording has been deleted.</string>

    <string name="records_name">Records</string>
</resources>