<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gk.recording.fragments.AudioRecordingFragment"
    android:background="@drawable/app_primary_gradient">

    <LinearLayout
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/message_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_message_begin"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/message_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/recording_message_start"
            android:textColor="@color/recording_button"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/message_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_message_end"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recording_button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_text"
        app:layout_constraintVertical_bias="0.109">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/recording_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/recording_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/handle_recording_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/change_screens"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recording_button_area"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@drawable/save_recording_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/save_recording"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/delete_recording_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/delete_recording"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/reset_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_screens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.109">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_recordings_list"
            android:text="@string/check_recordings_list"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_video_recording"
            android:text="@string/go_to_video_recording"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>